tests/rosetta/out/Java/csv-data-manipulation.error
javac: exit status 1
/tmp/CsvDataManipulation.java:14: error: incompatible types: String cannot be converted to Number
            res = res + ((Number)xs.get(i)).doubleValue();
                                       ^
/tmp/CsvDataManipulation.java:27: error: cannot find symbol
        Digit digits = new Digit(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
        ^
  symbol:   class Digit
  location: class CsvDataManipulation
/tmp/CsvDataManipulation.java:27: error: cannot find symbol
        Digit digits = new Digit(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
                           ^
  symbol:   class Digit
  location: class CsvDataManipulation
/tmp/CsvDataManipulation.java:47: error: incompatible types: List<String> cannot be converted to List<List<String>>
            for (List<String> s : (List<List<String>>)rows.get(i)) {
                                                              ^
/tmp/CsvDataManipulation.java:48: error: incompatible types: List<String> cannot be converted to String
                sum = (int)(sum + parseIntStr(s));
                                              ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
5 errors
